Migration to SFML

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,11 +2,6 @@ cmake_minimum_required (VERSION 3.9)
 
 project(Bloodstone)
 
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
-
-find_package(SDL2 REQUIRED)
-include_directories(${SDL2_INCLUDE_DIRS})
-
 set(CMAKE_CXX_STANDARD 17)
 
 set(ENGINE_DIR "${PROJECT_SOURCE_DIR}/engine")
@@ -21,6 +16,8 @@ set(GAME_SRC_DIR "${GAME_DIR}/src")
 include_directories("${ENGINE_INCLUDE_DIR}")
 include_directories("${GAME_INCLUDE_DIR}")
 
+set(SFML_LIBRARIES "${SFML_LIBRARIES}")
+
 file(GLOB_RECURSE ALL_SRC
     "${ENGINE_INCLUDE_DIR}/*.hpp"
     "${ENGINE_SRC_DIR}/*.cpp"
@@ -29,18 +26,19 @@ file(GLOB_RECURSE ALL_SRC
     "${GAME_SRC_DIR}/*.cpp"
     )
 
-add_executable(Bloodstone "${ALL_SRC}")
+find_package(SFML 2.5 COMPONENTS system window graphics audio REQUIRED)
 
-target_link_libraries(Bloodstone ${SDL2_LIBRARIES})
-
-#Copy dll
-add_custom_command(TARGET Bloodstone POST_BUILD 
-                   COMMAND ${CMAKE_COMMAND} -E copy_if_different
-                   "${SDL2_DLL}"
-                   ${CMAKE_BINARY_DIR})
+add_executable(Bloodstone "${ALL_SRC}" "engine/include/Graphics/TextureMeta.hpp" )
+target_link_libraries(Bloodstone sfml-system sfml-window sfml-graphics sfml-audio)
 
 #Copy assets
 add_custom_command(TARGET Bloodstone POST_BUILD 
                    COMMAND ${CMAKE_COMMAND} -E copy_directory
                    "${GAME_DIR}/Assets"
                    "${CMAKE_BINARY_DIR}/Assets")
+
+#Copy lib
+add_custom_command(TARGET Bloodstone POST_BUILD 
+                   COMMAND ${CMAKE_COMMAND} -E copy_directory
+                   "${SFML_BIN}"
+                   "${CMAKE_BINARY_DIR}")
